# Hyperdocs

./: .env.example  .gitignore  Claude gmail api key.docx  DATA_DICTIONARY.html  Dockerfile  GAP_TRACKER.md  HYPERDOCS_3_SYSTEM_GUIDE.html  LICENSE  LIVING_IDEAS.html  MANIFEST.in  MULTI_PASS_OPUS_PLAN.md  PHASE_0_COMPLETE_REFERENCE.html  PRODUCT_ROADMAP.html  QUICKSTART.md  README.md  Responding to Matt Shumer.docx  SYSTEM_REPORT.html  TEST_PLAN.md  TROUBLESHOOTING.md  What I See.docx  activity_monitor.py  batch_llm_orchestrator.py  batch_orchestrator.py  batch_phase0_reprocess.py  before_after_cleaning.html  chunking_demo.html  concierge.py  config.py  cross-session-feedback-options.html  dashboard.py  duplicate_investigation.html  extraction_causal_map.html  file-genealogy-code-similarity-analysis.html  gap-analysis-0012ebed.html  gap_checklist.py  hyperdocs-architecture-diagram-v2.html  hyperdocs-code-analysis-findings-v2.html  hyperdocs-engineering-plan-v2.html  hyperdocs-full-schematic.html  hyperdocs-pipeline-schematic.html  (+25 more)
archive_originals/: batch_orchestrator.py  config.py  requirements.txt
commands/: hyperdocs.md
completed/: 01_code_similarity_engine.html  02_html_cleanup.html  03_partial_session_diagnosis.html
examples/: sample_session.jsonl
experiment/: compare.py  option_a.py  option_b.py  option_c.py
hyperdocs/: __init__.py  __main__.py  cli.py
obsolete/: batch_phase5.py  gap_checklist.py  iterate.py  schema_audit.py
phase_0_prep/: PHASE0_CHANGELOG.md  batch_llm_orchestrator.py  batch_p0_llm.py  batch_phase0_reprocess.py  build_opus_filtered.py  (+18 more)
(+148 files in other folders)
