[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperdocs"
version = "0.3.0"
description = "Pipeline for extracting idea evolution, behavioral patterns, and file genealogy from Claude Code sessions"
readme = "GAP_TRACKER.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Stefan Michael Check", email = "smicha84@gmail.com"},
]

dependencies = [
    "anthropic>=0.40.0,<1.0.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
hyperdocs-pipeline = "tools.run_pipeline:main"
hyperdocs-normalize = "phase_0_prep.schema_normalizer:main"
hyperdocs-health = "tools.pipeline_health_check:main"
hyperdocs-aggregate = "phase_4_hyperdoc_writing.aggregate_dossiers:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools.packages.find]
include = [
    "phase_0_prep*",
    "phase_1_extraction*",
    "phase_2_synthesis*",
    "phase_3_hyperdoc_writing*",
    "phase_4_hyperdoc_writing*",
    "phase_4_insertion*",
    "tools*",
    "product*",
]
exclude = [
    "obsolete*",
    "archive_originals*",
    "experiment*",
    "output*",
]
